# pzzld

./: .env.example  .envrc  .firebaserc  .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  LICENSE  Puzzled.toml  README.md  SECURITY.md  Trunk.toml  default.nix  docker-compose.yml  firebase.json  flake.nix  package.json  wasm.dockerfile
.artifacts/example/: Cargo.toml  sample.wasm
.artifacts/example/assets/: composition.wac
.artifacts/example/assets/cmp/add/: add.wit
.artifacts/example/assets/cmp/worker/: Cargo.toml  worker.wasm
.artifacts/example/assets/cmp/worker/scripts/: wasm.sh
.artifacts/example/assets/wit/actor/: world.wit
.artifacts/example/assets/wit/adder/: world.wit
.artifacts/example/src/: lib.rs  platform.rs
.artifacts/example/src/actors/: manage.rs  mod.rs  view.rs  worker.rs
.artifacts/example/src/cli/: mod.rs  opts.rs
.artifacts/example/src/cli/opts/: add.rs  build.rs
.artifacts/example/src/platform/: impl_config.rs  impl_inner.rs  impl_platform.rs  impl_state.rs
.config/: Gateway.toml  Puzzled.toml  default.config.toml  docker.config.toml
.devcontainer/: devcontainer.json  env.dockerfile
.docker/: docker-compose.yml  workspace.dockerfile
.github/: dependabot.yml
.github/workflows/: cargo-bench.yml  cargo-clippy.yml  cargo-publish.yml  clippy.yml  docker.yml  firebase.yml  nightly.yml  pages.yml  rust.yml  wasm.yml
compilers/: Cargo.toml
compilers/src/: compiler.rs
compilers/src/states/: compiler.rs
core/: Cargo.toml
core/src/: lib.rs  primitives.rs
core/src/errors/: mod.rs
crates/compilers/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: backend.rs  error.rs  lib.rs  primitives.rs
crates/core/src/clients/: client.rs  mod.rs
crates/core/src/events/: event.rs  mod.rs
crates/core/src/macros/: component.rs
crates/core/src/proxies/: mod.rs
crates/core/src/servers/: mod.rs  server.rs
crates/core/src/signals/: shutdown.rs
crates/core/src/traits/: get.rs  wrapper.rs
crates/core/src/wasm/: math.rs
crates/gateways/: Cargo.toml
crates/gateways/src/: gateway.rs  lib.rs  states.rs  utils.rs
crates/gateways/src/api/routes/s3/: buckets.rs
crates/gateways/src/config/: mod.rs
crates/payments/: Cargo.toml
crates/payments/src/: lib.rs  settings.rs
crates/pipelines/: Cargo.toml
crates/pipelines/src/: pipeline.rs  primitives.rs  utils.rs
crates/sdk/: Cargo.toml  lib.rs
crates/sdk/examples/: basic.rs
crates/sdk/src/: lib.rs
crates/sdk/tests/: default.rs
crates/wallets/: Cargo.toml
crates/wallets/src/: bip0039.rs  lang.rs  lib.rs
crates/wallets/src/assets/: mod.rs
crates/wallets/src/mnemonics/: mnemonic.rs
crates/wallets/src/wallets/: wallet.rs
desktop/: Cargo.toml  desktop.dockerfile  tauri.conf.json
gateways/: Cargo.toml
gateways/src/: gateway.rs  lib.rs  sessions.rs  states.rs  utils.rs
gateways/src/api/routes/s3/: buckets.rs
gateways/src/config/: mod.rs
gateways/src/contexts/: context.rs
pzzld/: Cargo.toml  Dockerfile  Trunk.toml  index.html  package.json
pzzld/src/: app.rs  context.rs  lib.rs  main.rs  settings.rs  states.rs  utils.rs
pzzld/src/api/: mod.rs
pzzld/src/api/routes/: mod.rs  wasm.rs
pzzld/src/api/routes/auth/: mod.rs  oauth.rs  siwe.rs
pzzld/src/api/routes/s3/: buckets.rs  mod.rs
pzzld/src/api/routes/statics/: mod.rs  wasm.rs
pzzld/src/cli/: commands.rs  mod.rs
pzzld/src/cli/args/: wallets.rs
pzzld/src/cmp/nav/: mod.rs  navbar.rs
pzzld/src/components/headers/: hero.rs  mod.rs
pzzld/src/components/nav/: navbar.rs
pzzld/src/proxy/: mod.rs
pzzld/static/: app.css  index.html
pzzld/tests/: default.rs  wasm.rs
scripts/: build.sh  clean.sh  devenv.nix  run.sh  rustup.sh
wallets/: Cargo.toml
wallets/src/: bip0039.rs  lang.rs  lib.rs  primitives.rs  utils.rs
wallets/src/authorize/: interface.rs
wallets/src/credentials/: credential.rs
wallets/src/mnemonics/: mnemonic.rs  mod.rs  passphrase.rs
wallets/src/wallets/: grant.rs  keys.rs
wasm/: Cargo.toml  Dockerfile  Trunk.toml
wasm/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: commands.rs  lib.rs  main.rs  utils.rs
xtask/src/cli/: commands.rs  mod.rs  opts.rs
xtask/src/cli/args/: auto.rs  mod.rs  serve.rs  setup.rs
xtask/src/pipes/: mod.rs  pipeline.rs
