[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "Pzzld is a sandbox Rust project for learning and experimenting with Rust."
edition = "2021"
homepage = "https://github.com/FL03/pzzld/wikis"
license = "Apache-2.0"
repository = "https://github.com/FL03/pzzle"
readme = "README.md"
version = "0.1.0" # TODO - Update cargo package version

[workspace]
default-members = [
    "pzzld"
]
exclude = [ ]
members = [
    "pzzld",
    "bin/pzzld-cli",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.26" }
smart-default = "0.7"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = "unwind"
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
panic = "unwind"
rpath = false
opt-level = "z"
overflow-checks = false
