[package]
authors.workspace = true
categories = []
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords = []
license.workspace = true
name = "pzzld-core"
readme.workspace = true
repository.workspace = true
version.workspace = true


[features]
default = []

wasm = []
wasm-ext = []

[lib]
bench = true
crate-type = [ "cdylib", "rlib" ]
doctest = true
test = true

[build-dependencies]

[dependencies]

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.wasm32-wasi]
