[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
default-run = "web"
description = "Puzzled"
edition = "2021"
homepage = "https://github.com/FL03/pzzld/wiki"
keywords = []
license = "Apache-2.0"
name = "pzzld"
repository = "https://github.com/FL03/pzzld"
version = "0.1.0"

[lib]
crate-type = [ "cdylib", "rlib" ]
test = true

[[bin]]
name = "web"
path = "src/bin/web/main.rs"
test = false

[build-dependencies]
substrate-wasm-builder = "6.0.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
dioxus = { features = ["macro"], version = "0.3" }
dioxus-web = { features = ["hydrate"], version = "0.3" }

futures = "0.3.25"
gloo = { features = [ "futures" ], version = "0.8" }
js-sys = { features = [], version = "0.3.60" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.24.1" }
# yew = { features = ["csr", "ssr"], version = "0.20" }
wasm-bindgen = { features = [ "serde-serialize" ], version = "0.2.83"}
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Node"
]
version = "0.3.60"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
