[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
default-run = "puzzled"
description = "Puzzled"
edition = "2021"
homepage = "https://github.com/FL03/pzzld/wiki"
keywords = []
license = "Apache-2.0"
name = "pzzld"
repository = "https://github.com/FL03/pzzld"
version = "0.1.0"

[[bin]]
bench = false
name = "puzzled"
path = "src/bin/puzzled.rs"
test = false

[features]
default = []

wasm = []
wasm-ext = []

[lib]
bench = true
crate-type = [ "cdylib", "rlib" ]
doctest = true
test = true

[build-dependencies]

[dependencies]
anyhow = "1"
dioxus = { features = ["macro"], version = "0.3" }
[target.'cfg(any(macos, unix, windows))'.dependencies]
dioxus-desktop = "0.3"
[target.'cfg(target_family = "wasm")'.dependencies]
dioxus-web = { features = ["hydrate"], version = "0.3" }
futures = "0.3"
gloo = { features = [ "futures" ], version = "0.8" }
js-sys = { features = [], version = "0.3" }
log = "0.4"
pulldown-cmark = { features = [], version = "0.9" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.24" }

# WebAssembly (emscripten)
wasm-bindgen = { features = [ "serde-serialize" ], version = "0.2" }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

[dependencies.web-sys]
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Node"
]
version = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
