[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "Puzzled"
edition = "2021"
homepage = "https://github.com/FL03/pzzld/wiki"
keywords = []
license = "Apache-2.0"
name = "pzzld-core"
repository = "https://github.com/FL03/pzzld"
version = "0.1.0"

[features]
default = []


[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
acme = { features = [], git = "https://github.com/FL03/acme", branch = "v0.2.5", version = "0.2.5" }
scsys = { features = ["full"], version = "0.1.39" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.24" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
