[package]
build = "build.rs"
description = "Core primitives and utilities for the pzzld platform"
name = "pzzld-core"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["default"]
rustc-args = ["--cfg", "docsrs"]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[lib]
bench = false

[dependencies]
# concurrency & parallelism
rayon = { optional = true, workspace = true }
# data structures
hashbrown = { optional = true, workspace = true }
# mathematics
num-complex = { optional = true, workspace = true }
num-traits = { workspace = true }
# error handling
thiserror = { workspace = true }
# random
getrandom = { optional = true, workspace = true }
rand = { optional = true, workspace = true }
rand_distr = { optional = true, workspace = true }
# serialization
serde = { optional = true, features = ["derive"], workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# time
chrono = { optional = true, workspace = true }
time ={ optional = true, workspace = true }
# WebAssembly
wasm-bindgen = { optional = true, workspace = true }

[features]
default = ["std"]

full = [
  "default",
  "complex",
  "hashbrown",
  "json",
  "rand",
  "serde",
  "time",
]

# ********* [FF] Features *********
json = [
  "alloc",
  "serde",
  "serde_json",
]

macros = []

nightly = [
  "hashbrown?/nightly",
  "rand?/nightly",
]

time = [
  "std",
  "chrono",
  "time_1",
]

# ********* [FF] Environments *********
std = [
  "alloc",
  "chrono?/std",
  "getrandom?/std",
  "hashbrown?/default",
  "num-complex?/std",
  "num-traits/std",
  "rand?/std",
  "rand?/std_rng",
  "rand?/thread_rng",
  "rand_distr?/std",
  "serde?/std",
  "serde_json?/std",
  "time?/std",
  "thiserror/std",
  "wasm-bindgen?/std",
]

wasi = []

wasm = [
  "wasm_bindgen",
  "getrandom?/wasm_js",
  "rayon?/web_spin_lock",
]

# ********* [FF] Dependencies *********
alloc = [
  "chrono?/alloc",
  "hashbrown?/alloc",
  "rand?/alloc",
  "rand_distr?/alloc",
  "serde?/alloc",
  "serde_json?/alloc",
  "time?/alloc",
  "wasm-bindgen?/gg-alloc",
]

chrono = ["dep:chrono"]

complex = ["dep:num-complex"]

hashbrown = ["dep:hashbrown"]

rand = [
  "rng",
  "dep:rand",
  "dep:rand_distr",
  "num-complex?/rand",
  "time?/rand",
]

rayon = [
  "dep:rayon",
  "hashbrown?/rayon",
]

rng = [
  "dep:getrandom",
  "rand?/os_rng",
  "rand?/small_rng",
]

serde = [
  "dep:serde",
  "dep:serde_derive",
  "serde?/derive",
  "chrono?/serde",
  "hashbrown?/serde",
  "num-complex?/serde",
  "rand?/serde",
  "rand_distr?/serde",
  "time?/serde",
  "wasm-bindgen?/serde",
]

serde_json = [
  "dep:serde_json",
  "wasm-bindgen?/serde_json",
]

time_1 = ["dep:time"]

wasm_bindgen = [
  "dep:wasm-bindgen",
  "time?/wasm-bindgen",
]
