[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "pzzld-payments"
edition = "2021"
homepage = "https://github.com/FL03/pzzld/wiki"
keywords = []
license = "Apache-2.0"
name = "pzzld-payments"
repository = "https://github.com/FL03/pzzld"
version = "0.1.0"

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
acme = { features = ["net"], git = "https://github.com/FL03/acme", branch = "v0.2.5", version = "0.2.5" }
scsys = { features = ["full"], version = "0.1.40" }

async-stripe = { features = [], version = "0.15.0" }
async-trait = "0.1"
axum-core = "0.3.0"
http = "0.2.8"
hyper = { features = ["full"], version = "0.14" }
lru = "0.9.0"
mio = "0.8.5"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
tokio = { features = ["full"], version = "1" }
tower = "0.4.13"
tower-http = { features = ["full"], version = "0.3.4" }
tracing = "0.1.37"
tracing-subscriber = { features = ["env-filter"], version = "0.3.16" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
