[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "Puzzled"
edition = "2021"
homepage = "https://github.com/FL03/pzzld/wiki"
keywords = []
license = "Apache-2.0"
name = "pzzld-pipelines"
repository = "https://github.com/FL03/pzzld"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dev-dependencies]

[dependencies]
async-trait = "0.1.59"
axum = "0.6.1"
hyper = { features = ["full"], version = "0.14.23" }
http = "0.2.8"
http-body = "0.4.5"
scsys = { features = ["full"], version = "0.1.36" }
serde = { features = ["derive"], version = "1.0.149" }
serde_json = "1.0.89"
strum = { features = ["derive"], version = "0.24.1" }
tokio = { features = ["macros"], version = "1.23.0" }
tracing = { features = [], version = "0.1.37" }


[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
