[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "Puzzled"
edition = "2021"
homepage = "https://github.com/FL03/pzzld/wiki"
keywords = []
license = "Apache-2.0"
name = "pzzld-sdk"
repository = "https://github.com/FL03/pzzld"
version = "0.1.0"

[features]
default = [ "core", "services" ]
full = [ "core", "services" ]

services = ["wallets"]

core = ["pzzld-core/default"]
# gateway = ["pzzld-gateway/default"]
# payments = ["pzzld-payments/default"]
wallets = ["pzzld-wallets/default"]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dev-dependencies]

[dependencies]
pzzld-core = { features = [], optional = true, path = "../core", version = "0.1.0" }
# pzzld-gateway = { features = [], optional = true, path = "../gateways", version = "0.1.0" }
# pzzld-payments = { features = [], optional = true, path = "../payments", version = "0.1.0" }
pzzld-wallets = { features = [], optional = true, path = "../wallets", version = "0.1.0" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
